fixed line spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-p, a {
+p, a, .links {
     display: inline;
 }
